@@ -22,8 +22,8 @@ package org.apache.cassandra.spark.bulkwriter;
 import java.math.BigInteger;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
